syntax = "proto3";

package personas;

service PersonasService {
    rpc CreatePersona (CreatePersonaRequest) returns (Persona) {}
    rpc GetPersona (GetPersonaRequest) returns (Persona) {}
    rpc ListPersonas (ListPersonasRequest) returns (ListPersonasResponse) {}
    rpc UpdatePersona (UpdatePersonaRequest) returns (Persona) {}
    rpc DeletePersona (DeletePersonaRequest) returns (DeletePersonaResponse) {}
}

message Persona {
    int32 persona_id = 1;
    string nombre = 2;
    string apellidoPaterno = 3;
    string apellidoMaterno = 4;
    int32 tipoDocumentoId = 5;
    string numeroDocumento = 6;
    string telefonoPrincipal = 7;
    string telefonoSecundario = 8;
    string direccion = 9;
    string correoElectronico = 10;
    string fechaNacimiento = 11;
    int32 generoId = 12;
    string createdAt = 13;
    string updatedAt = 14;
}

message CreatePersonaRequest {
    string nombre = 1;
    string apellidoPaterno = 2;
    string apellidoMaterno = 3;
    int32 tipoDocumentoId = 4;
    string numeroDocumento = 5;
    string telefonoPrincipal = 6;
    string telefonoSecundario = 7;
    string direccion = 8;
    string correoElectronico = 9;
    string fechaNacimiento = 10;
    int32 generoId = 11;
}

message GetPersonaRequest {
    int32 personaId = 1;
}

message ListPersonasRequest {
    int32 page = 1;
    int32 limit = 2;
    string search = 3;
}

message ListPersonasResponse {
    repeated Persona personas = 1;
    int32 total = 2;
}

message UpdatePersonaRequest {
    int32 personaId = 1;
    string nombre = 2;
    string apellidoPaterno = 3;
    string apellidoMaterno = 4;
    int32 tipoDocumentoId = 5;
    string numeroDocumento = 6;
    string telefonoPrincipal = 7;
    string telefonoSecundario = 8;
    string direccion = 9;
    string correoElectronico = 10;
    string fechaNacimiento = 11;
    int32 generoId = 12;
}

message DeletePersonaRequest {
    int32 personaId = 1;
}

message DeletePersonaResponse {
    bool success = 1;
}
